--- a/dance_web/Events.html
+++ b/dance_web/Events.html
@@ -18,8 +18,8 @@
        <div id="buttons hid">
 			<a class="nav" id="b1" href="#">contact</a>
 			<a class="nav" id="b2" href="#">videos</a>
-			<a class="nav" id="b3" href="#">schedule</a>
-			<a class="nav" id="b4" href="#">about</a>
+			<a class="nav" id="b3" href="#">about</a>
+			<a class="nav" id="b4" href="#">home</a>
 
 
         </div>
